--- a/vue2/public/index.html
+++ b/vue2/public/index.html
@@ -46,7 +46,7 @@
         console.warn("浏览器不支持launchStage跳转")
 
       },
-      handleBack: () => {}
+      handleBack: () => { }
     }
   };
   (function (para) {
@@ -98,8 +98,8 @@
   });
   // csii.quick('autoTrack');
 </script>
-<script src="https://cdn.bootcdn.net/ajax/libs/vConsole/3.3.4/vconsole.min.js"></script>
-  <!-- <script>
+<!-- <script src="https://cdn.bootcdn.net/ajax/libs/vConsole/3.3.4/vconsole.min.js"></script> -->
+<!-- <script>
     var vConsole = new VConsole()
   </script> -->
 
