--- a/vue2/public/index.html
+++ b/vue2/public/index.html
@@ -14,7 +14,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no" />
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <title>手机银行</title>
+  <title>
+    <%= htmlWebpackPlugin.options.title %>
+  </title>
 </head>
 <script>
   // orientationchange监听手机的横竖屏发生切换
